# synapse

./: .gitignore  AGENT_CONTROL_GUIDE.md  AI_OPTIMIZATION_GUIDE.md  ARCHITECTURAL_BLUEPRINT.md  BIG_TO_SMALL_WORKFLOW.md  CLEANUP_PLAN.md  CONSTRAINED_TOOLS_SUMMARY.md  EXPECTED_INTERACTION_FLOW.md  INBOX_WIZARD_FIX_STATUS.md  INSTALLATION.md  NO_NEXT_ACTION_WIZARD_FEATURE.md  PROJECT_VISION.md  QUICK_START_AI_OPTIMIZATION.md  QUICK_START_RAG.md  RAG_IMPLEMENTATION_COMPLETE.md  RAG_SETUP_GUIDE.md  README.md  REFACTORING_ROADMAP.md  ROADMAP.md  TOKEN_OPTIMIZATION_CURRENT_STATE.md  TOKEN_OPTIMIZATION_IMPLEMENTATION_PLAN.md  TOKEN_OPTIMIZATION_STATUS.md  VISION.md  WIZARD_COMPLETE_DELETE_FEATURE.md  claude.md  config.yaml  create_handover.sh  handover.txt  pyproject.toml  requirements.txt  synapse  synapse_shell_function.sh  test_agent_conversation.py  test_create_inbox_tasks.py  test_enum_schemas.py  test_full_workflow.py  test_knowledge_query.py  test_knowledge_updates.py  test_learning_protocol.py  test_literal_extraction.py  (+6 more)
.claude/: claude.md
agents/: coder.yaml  scheduler.yaml  todoist.yaml  todoist_inbox_processor.yaml  todoist_openai.yaml
core/: agent_loader.py  logger.py  main.py  schema_generator.py  secure_executor.py  weather_service.py
knowledge/: todoist_context.md  todoist_rules.md  todoist_system.md
mini-projects/: 001_CONSOLIDATE_DOCS.md
scripts/: check_google_models.py  ensure_rag_service.py  index_codebase.py  manage_vector_stores.py  plan_my_day.py  process_inbox.py  rag_search.py  rag_search_tracked.py  run_e2e_test.py  verify_rag_usage.py
synapse.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_agent_classes.py  test_agent_loader.py  test_anthropic_provider.py  test_coder_agent_methods.py  test_config.py  test_hardening.py  test_inbox_wizard.py  test_knowledge_abstraction.py  test_knowledge_integration.py  test_main_refactored.py  test_markdown_rendering.py  test_provider_abstraction.py  test_rich_output.py  test_scheduler.py  test_schema_generator.py  test_todoist_agent.py  test_todoist_engine.py  (+2 more)
(+54 files in other folders)
