[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "synapse"
version = "0.1.0"
description = "A modular, command-line-first AI orchestration engine."
authors = [
  { name="Your Name", email="you@example.com" },
]
requires-python = ">=3.11"
dependencies = [
    "openai>=1.35.3",
    "typer[all]>=0.12.3",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.1",
    "tenacity>=8.4.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "tools*"]
exclude = ["tests*"]
