[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "synapse"
version = "0.2.0"
description = "A universal, multi-platform AI orchestration engine for agentic workflows"
authors = [
  { name="Bryce Gordon", email="bryce@example.com" },
]
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.69.0",
    "chromadb>=1.1.1",
    "todoist-api-python>=3.1.0",
    "typer[all]>=0.12.3",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "langchain-text-splitters>=0.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.2",
    "pytest-mock>=3.15.1",
]

[project.scripts]
synapse = "core.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "agents*", "knowledge*"]
exclude = ["tests*"]
